syntax = "proto3";

import "google/protobuf/empty.proto";

package com.espresso.grpc.users;

option java_multiple_files = true;

service UsersService {

  rpc createUser(User) returns (UserId);

  rpc getUser(UserId) returns (User);

  rpc removeUser(UserId) returns (google.protobuf.Empty);

  rpc setExpiration(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc removeExpiration(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message User {
  optional string uid = 1;
  string username = 2;
  string email = 3;
  optional int64 removeAt = 4;
  optional bool expired = 5;
}

message UserId {
  string uid = 1;
}